--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.mobileprogramming_2017_2.MainActivity">
 
-    <Button
-        android:id="@+id/button"
+    <ImageButton
+        android:id="@+id/imageButton2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:onClick="nextScene"
-        android:text="Button"
-        tools:layout_editor_absoluteX="102dp"
-        tools:layout_editor_absoluteY="217dp" />
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/moon"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-34dp" />
 </android.support.constraint.ConstraintLayout>
