--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -7,11 +7,22 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/textView"
+    <TimePicker
+        android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tab 3 Fragment"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="247dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="-14dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <TextClock
+        android:id="@+id/textClock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/timePicker"
+        app:layout_constraintHorizontal_bias="0.503" />
 </android.support.constraint.ConstraintLayout>
