--- a/app/src/main/res/layout/scene2_layout.xml
+++ b/app/src/main/res/layout/scene2_layout.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <Button
         android:id="@+id/One"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="goToScene2"
-        android:text="Button"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="goToScene2"
+        android:text="Button" />
 
     <Button
         android:id="@+id/Two"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="goToScene1"
-        android:text="Button"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
-
+        android:layout_alignParentEnd="true"
+        android:onClick="goToScene1"
+        android:text="Button" />
 </RelativeLayout>
